# attack-radar

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data_sources.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: default.md  issue.yml
radar-core/: pyproject.toml
radar-core/src/radar_core/: __init__.py  constants.py  container.py  duck_db.py  logger.py  models.py  signal_stream.py  utils.py
radar-core/tests/: conftest.py  test_container.py  test_logger.py  test_signal_stream.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  constants.py  logger.py  models.py  signal_stream.py
shared/tests/: conftest.py  test_signal_stream.py
signal-forge/: Dockerfile  pyproject.toml
signal-forge/src/signal_forge/: consumer.py  container.py  ipdb.py  main.py  signal_processor.py
signal-forge/src/signal_forge/core/: models.py
signal-forge/src/signal_forge/core/handlers/: base_handler.py  text_handler.py
signal-forge/src/signal_forge/shared/: constants.py  utils.py
signal-forge/tests/: __init__.py  test_main.py
signal-sweep/: .gitignore  CODE_REVIEW.md  Dockerfile  Makefile  data_sources.yml  pyproject.toml  startup.sh
signal-sweep/src/signal_sweep/: config.py  container.py  main.py
signal-sweep/src/signal_sweep/core/: models.py  signal_stream.py  source.py
signal-sweep/src/signal_sweep/core/handlers/: base_handler.py  text_handler.py
signal-sweep/src/signal_sweep/handlers/: base_handler.py  handle_txt.py  text_handler.py
signal-sweep/src/signal_sweep/shared/: constants.py  logger.py  redis_stream.py  signal_stream.py  source.py  utils.py
signal-sweep/tests/: conftest.py  test_main.py  test_signal_stream.py
signal-sweep/tests/handlers/: test_handle_text.py  test_signal_stream.py
