[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radar-core"
version = "0.1.0"
description = "The radar-core package for the attack-radar data pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=6.4.0",
    "httpx>=0.28.1",
]
