[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=6.4.0",
]
#
# [dependency-groups]
# dev = [
#     "black>=25.1.0",
# ]
# test = [
#     "pytest>=8.0.0",
#     "pytest-asyncio>=0.24.0",
#     "pytest-mock>=3.14.0",
#     "httpx[test]>=0.28.1",
# ]
