[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal_forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "radar-core",
    "dependency-injector>=4.48.1",
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
]

[tool.uv.sources]
radar-core = { workspace = true }
