[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal_sweep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx[test]>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
