[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal_sweep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "radar-core",
    "dependency-injector>=4.48.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
]

[tool.uv.sources]
radar-core = { workspace = true }
